[package]
name = "shaderc_acp"
version = "0.1.0"
authors = ["Markus Røyset <maroider@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.2.0"
shaderc = "0.6.2"
walkdir = "2.3.1"

[workspace]
members = [
    "shaderc_acp_macros",
]
